<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cyphermessenger.RegistrationActivity">

    <LinearLayout
        android:id="@+id/name_field_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/name_field_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:editable="false"
            android:text="@string/prompt_name"/>

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_field_label" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_field_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_field_layout"
        android:orientation="vertical"
        android:layout_margin="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/password_field_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:editable="false"
            android:fontFamily="sans-serif"
            android:text="@string/prompt_password" />

        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_below="@id/password_field_label" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/confirmation_field_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_field_layout"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/confirmation_field_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:editable="false"
            android:fontFamily="sans-serif"
            android:text="@string/prompt_confirmation" />

        <EditText
            android:id="@+id/confirm_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_below="@id/confirmation_field_label" />

    </LinearLayout>


    <ImageView
        android:id="@+id/captcha_image"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <LinearLayout
        android:id="@+id/captcha_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="Orientation"
        android:layout_below="@id/confirmation_field_layout"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/captcha_field_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:editable="false"
            android:text="@string/prompt_captcha_text"
            android:layout_below="@id/captcha_image" />

        <EditText
            android:id="@+id/captcha_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/captcha_field_label" />

    </LinearLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/captcha_layout"
        android:text="@string/button_register" />

</RelativeLayout>
